--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "node-persist": "0.0.8",
     "restify": "^4.0.3",
     "rusha": "^0.8.3",
-    "scrape-engine": "git+https://github.com/peermusic/scrape-engine.git"
+    "scrape-engine": "git+https://github.com/peermusic/scrape-engine.git",
+    "tweetnacl": "^0.13.2",
+    "uid": "0.0.2"
   }
 }
