added devDependency `standard`

--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "secure-client-server-messaging": "git+https://github.com/peermusic/secure-client-server-messaging.git",
     "tweetnacl": "^0.13.2",
     "uid": "0.0.2"
+  },
+  "devDependencies": {
+    "standard": "^5.4.1"
   }
 }
